[package]
name = "cee-scape"
version = "0.1.5"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "The cee-scape crate provides Rust access to `setjmp` and `sigsetjmp` functionality"
homepage = "https://github.com/pnkfelix/cee-scape"
documentation = "https://docs.rs/cee-scape/"
repository = "https://github.com/pnkfelix/cee-scape"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
expect-test = "1.4"

[build-dependencies]
cc = { version = "1.0" }

#[profile.release]
#debug = "full"

[features]
default = ["test_c_integration"]
test_c_integration = []
